--- a/index.html
+++ b/index.html
@@ -393,3 +393,13 @@
 
 </body>
 </html>
+
+<!-- Art by Hansal Pravin Kachhara
+ _________________.---.______
+(_(______________(_o o_(____()
+        hpk  .___.'. .'.___.
+             \ o    Y    o /
+              \ \__   __/ /
+               '.__'-'__.'
+                   '''        (c) by Hansal 04.03.04   -- !>
+
