--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <div class="copyright-box">
               <p class="copyright">&copy; Copyright <strong>Hansal Pravin Kachhara</strong>. All Rights Reserved</p>
               <div class="credits">
-                Designed by <a href="https://hansalkachhara.me/">Hansal Pravin Kachhara. <br> Webpage Version 1.0</a>
+                Designed by <a href="https://hansalkachhara.me/">Hansal Pravin Kachhara. <br>Version 1.1</a>
               </div>
             </div>
           </div>
