--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="utf-8">
   <title>Hansal Pravin Kachhara</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="Hansal Kachhara, Hansal, Kachhara, Our Space, Podcast, Short Films, GICLM, Kachhara, Pravin Kachhara, Hansal Pravin Kachhara, HPK" name="keywords">
+  <meta content="Hansal Pravin Kachhara's Personal Portfoilio Website. Started on 4th March 2022. (C) Hansal Pravin Kachhara." name="description">
+  <meta name="author" content="Hansal Pravin Kachhara">
+  <meta http-equiv="refresh" content="30">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicons -->
   <link href="img/testimonial-2.jpg" rel="icon">
