--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 During the lockdown I connected with CRY to help the underprivileged children to gain their educational needs. 
                 I had picked teaching Science and taught students from 4th and 9th grade; every class with them was a way to gain new experience and develop our life skill, while teaching them. 
                 The classes were held online.
-                <br> I was the <strong>Volunteer</strong>.
+                <br> I was a <strong>Volunteer</strong>.
               </p>
             </div>
           </div>
@@ -213,7 +213,7 @@
                 My buddies and I used to conduct a plethora of experiments with a toy drone. 
                 One day it suddenly quit working so to find the issue I opened it up and attempted to repair it; just some wires were torn out so I replaced them and it commenced to work again. 
                 But this sparked a conception in me to build my drone and I decided to build one.
-                <br> I an the <strong>Technophile</strong>.
+                <br> I am a <strong>Technophile</strong>.
               </p>
             </div>
           </div>
