--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Hansal Pravin Kachhara. <br> It's my birthday today 🥳</h1>
+          <h1 class="intro-title mb-4">I am Hansal Pravin Kachhara.</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Student,Founder,Web Developer,Video Editer,Technophile</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4" style="font-size:x-large;">🎉🎊🎈🎁🎂🥳 It's my Birthday today. 🥳🎂🎁🎈🎊🎉</h1>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
