--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicons -->
-  <link href="img/testimonial-2.jpg" rel="icon">
+  <link href="img/Hansal New.jpg" rel="icon">
   <link href="img/apple-touch-icon.jpg" rel="apple-touch-icon">
 
   <!-- Bootstrap CSS File -->
